--- a/i18n/bundle.i18n.en.json
+++ b/i18n/bundle.i18n.en.json
@@ -14,5 +14,7 @@
   "setup.chooseWallpaper": "Choose a wallpaper",
   "setup.inputWallpaper": "Wallpaper file path",
   "setup.chooseThemeMod": "Choose a theme modification for mica effect to pass through",
+  "setup.useCurrentThemeLabel": "Use current theme (no change)",
+  "setup.useCurrentThemeDetail": "You need to modify `colorCustomizations` yourself.",
   "setup.complete": "Setup complete."
 }
