--- a/i18n/bundle.i18n.zh-cn.json
+++ b/i18n/bundle.i18n.zh-cn.json
@@ -1,4 +1,6 @@
 {
+  "yes": "是",
+  "no": "否",
   "tryAdminMsg": "需要管理员权限以应用更改。",
   "admin": "以管理员权限运行 VS Code 来应用更改。",
   "enabled": "毛玻璃主题已启用。重启以生效。如果 Code 提示已损坏，请点击“不要再提示”，查看 `README` 获取更多信息。",
