--- a/i18n/bundle.i18n.en.json
+++ b/i18n/bundle.i18n.en.json
@@ -16,7 +16,6 @@
   "setup.chooseWallpaper": "Choose a wallpaper",
   "setup.inputWallpaper": "Wallpaper file path",
   "setup.chooseThemeMod": "Choose a theme modification for mica effect to pass through",
-  "setup.noChangeLabel": "No change",
-  "setup.noChangeDetail": "You need to modify `colorCustomizations` yourself.",
+  "setup.chooseThemeModPlaceHolder": "If nothing is selected, you need to modify `colorCustomizations` yourself.",
   "setup.complete": "Setup complete."
 }
