--- a/i18n/bundle.i18n.zh-cn.json
+++ b/i18n/bundle.i18n.zh-cn.json
@@ -16,7 +16,6 @@
   "setup.chooseWallpaper": "选择一张壁纸",
   "setup.inputWallpaper": "壁纸文件路径",
   "setup.chooseThemeMod": "选择一个主题修改器使mica效果能够穿透",
-  "setup.noChangeLabel": "无更改",
-  "setup.noChangeDetail": "你需要修改自行修改 `colorCustomizations`。",
+  "setup.chooseThemeModPlaceHolder": "如果什么都不选，那么你需要修改自行修改 `colorCustomizations`。",
   "setup.complete": "配置完成。"
 }
